switch awesome-typescript-loader to ts-loader

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "autoprefixer": "^6.4.0",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -64,6 +63,7 @@
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "ts-loader": "^8.0.1",
     "typescript": "^3.4.4",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
