--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "antd-mobile": "^2.2.14",
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
+    "mockjs": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
