--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "npm": ">= 3.0.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "mockjs": "^1.1.0",
@@ -89,8 +90,7 @@
     "react-transition-group": "^4.2.1",
     "redux": "^4.0.5",
     "redux-react-hook": "^4.0.1",
-    "shallowequal": "^1.1.0",
-    "whatwg-fetch": "^3.0.0"
+    "shallowequal": "^1.1.0"
   },
   "browserslist": [
     "> 1%",
