--- a/package.json
+++ b/package.json
@@ -91,7 +91,9 @@
     "react-transition-group": "^4.2.1",
     "redux": "^4.0.5",
     "redux-react-hook": "^4.0.1",
-    "shallowequal": "^1.1.0"
+    "shallowequal": "^1.1.0",
+    "whatwg-fetch": "^3.5.0",
+    "zustand": "^3.2.0"
   },
   "browserslist": [
     "> 1%",
