--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-error-boundary": "^3.1.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-router-page-transition": "^3.1.0",
