--- a/66a0c5079015963c2e7b21be/manifest.json
+++ b/66a0c5079015963c2e7b21be/manifest.json
@@ -29,7 +29,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "https://www.wishday.cc/669fcf4c961fad4e1601a911/index.html",
+    "start_url": "https://www.bestwish.cc/66a0c5079015963c2e7b21be/index.html",
     "display": "standalone",
     "background_color": "#f9f9fa",
     "theme_color": "#f9f9fa",
@@ -37,7 +37,7 @@
     "related_applications": [
       {
         "platform": "webapp",
-        "url": "https://www.wishday.cc/669fcf4c961fad4e1601a911/manifest.json"
+        "url": "https://www.bestwish.cc/66a0c5079015963c2e7b21be/manifest.json"
       }
     ]
   }  
